# cpp-gym

./: README.md
tour-of-cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
tour-of-cpp/.github/workflows/: ci.yml
tour-of-cpp/chapters/: CMakeLists.txt
tour-of-cpp/chapters/ch01_basics/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch01_basics/examples/: constants.cpp  control_flow.cpp  functions.cpp  hello_world.cpp  pointers_arrays_refs.cpp  types_variables.cpp
tour-of-cpp/chapters/ch01_basics/exercises/: ex01_hello.cpp  ex02_functions.cpp  ex03_types.cpp  ex04_pointers_refs.cpp  ex05_scope.cpp
tour-of-cpp/chapters/ch01_basics/tests/: test_ch01.cpp
tour-of-cpp/chapters/ch02_user_defined_types/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch02_user_defined_types/examples/: classes.cpp  enumerations.cpp  structures.cpp  unions.cpp
tour-of-cpp/chapters/ch02_user_defined_types/exercises/: ex01_struct.cpp  ex02_class.cpp  ex03_enum.cpp
tour-of-cpp/chapters/ch02_user_defined_types/tests/: test_ch02.cpp
tour-of-cpp/chapters/ch03_modularity/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch03_modularity/examples/: function_args.cpp  namespaces.cpp
tour-of-cpp/chapters/ch03_modularity/exercises/: ex01_header.cpp  ex02_namespace.cpp
tour-of-cpp/chapters/ch03_modularity/tests/: test_ch03.cpp
tour-of-cpp/chapters/ch04_error_handling/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch04_error_handling/examples/: assertions.cpp  exceptions.cpp  invariants.cpp
tour-of-cpp/chapters/ch04_error_handling/exercises/: ex01_exceptions.cpp  ex02_invariants.cpp
tour-of-cpp/chapters/ch04_error_handling/tests/: test_ch04.cpp
tour-of-cpp/chapters/ch05_classes/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch05_classes/examples/: abstract_types.cpp  class_hierarchies.cpp  concrete_types.cpp  virtual_functions.cpp
tour-of-cpp/chapters/ch05_classes/exercises/: ex01_shape.cpp  ex02_container.cpp
tour-of-cpp/chapters/ch05_classes/tests/: test_ch05.cpp
tour-of-cpp/chapters/ch06_essential_operations/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch06_essential_operations/examples/: copy_move.cpp  operator_overloading.cpp  resource_management.cpp  user_defined_literals.cpp
tour-of-cpp/chapters/ch06_essential_operations/exercises/: ex01_string.cpp  ex02_raii.cpp
tour-of-cpp/chapters/ch06_essential_operations/tests/: test_ch06.cpp
tour-of-cpp/chapters/ch07_templates/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch07_templates/examples/: function_templates.cpp  lambda_templates.cpp  parameterized_types.cpp  template_mechanisms.cpp
tour-of-cpp/chapters/ch07_templates/exercises/: ex01_stack.cpp  ex02_algorithms.cpp
tour-of-cpp/chapters/ch07_templates/tests/: test_ch07.cpp
tour-of-cpp/chapters/ch08_concepts/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch08_concepts/examples/: concept_definitions.cpp  concepts_intro.cpp  generic_programming.cpp  variadic_templates.cpp
tour-of-cpp/chapters/ch08_concepts/exercises/: ex01_concepts.cpp  ex02_variadic.cpp
tour-of-cpp/chapters/ch08_concepts/tests/: test_ch08.cpp
tour-of-cpp/chapters/ch09_library_overview/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch09_library_overview/examples/: std_library_tour.cpp
tour-of-cpp/chapters/ch09_library_overview/tests/: test_ch09.cpp
tour-of-cpp/chapters/ch10_strings_regex/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch10_strings_regex/examples/: regex.cpp  string_views.cpp  strings.cpp
tour-of-cpp/chapters/ch10_strings_regex/exercises/: ex01_strings.cpp  ex02_regex.cpp
tour-of-cpp/chapters/ch10_strings_regex/tests/: test_ch10.cpp
tour-of-cpp/chapters/ch11_io/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch11_io/examples/: filesystem.cpp  formatting.cpp  input.cpp  output.cpp  streams.cpp
tour-of-cpp/chapters/ch11_io/exercises/: ex01_file_io.cpp  ex02_formatting.cpp
tour-of-cpp/chapters/ch11_io/tests/: test_ch11.cpp
tour-of-cpp/chapters/ch12_containers/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch12_containers/examples/: list.cpp  map.cpp  unordered_map.cpp  vector.cpp
tour-of-cpp/chapters/ch12_containers/exercises/: ex01_containers.cpp  ex02_map.cpp
tour-of-cpp/chapters/ch12_containers/tests/: test_ch12.cpp
tour-of-cpp/chapters/ch13_algorithms/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch13_algorithms/examples/: algorithm_overview.cpp  iterators.cpp  parallel_algorithms.cpp  predicates.cpp
tour-of-cpp/chapters/ch13_algorithms/exercises/: ex01_algorithms.cpp  ex02_custom_algorithm.cpp
tour-of-cpp/chapters/ch13_algorithms/tests/: test_ch13.cpp
tour-of-cpp/chapters/ch14_ranges/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch14_ranges/examples/: generators.cpp  pipelines.cpp  views.cpp
tour-of-cpp/chapters/ch14_ranges/exercises/: ex01_ranges.cpp
tour-of-cpp/chapters/ch14_ranges/tests/: test_ch14.cpp
tour-of-cpp/chapters/ch15_pointers_containers/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch15_pointers_containers/examples/: optional_variant.cpp  shared_ptr.cpp  span.cpp  unique_ptr.cpp
tour-of-cpp/chapters/ch15_pointers_containers/exercises/: ex01_smart_ptrs.cpp  ex02_optional.cpp
tour-of-cpp/chapters/ch15_pointers_containers/tests/: test_ch15.cpp
tour-of-cpp/chapters/ch16_utilities/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch16_utilities/examples/: chrono.cpp  function_adaption.cpp  move_forward.cpp  type_functions.cpp
tour-of-cpp/chapters/ch16_utilities/exercises/: ex01_chrono.cpp  ex02_type_traits.cpp
tour-of-cpp/chapters/ch17_numerics/: CMakeLists.txt  README.md
tour-of-cpp/chapters/ch18_concurrency/: CMakeLists.txt  README.md
tour-of-cpp/cmake/: CompilerWarnings.cmake
tour-of-cpp/projects/: CMakeLists.txt
tour-of-cpp/projects/mini_vector/: CMakeLists.txt  README.md  main.cpp  mini_vector.h
tour-of-cpp/projects/simple_json/: CMakeLists.txt  README.md  json_parser.cpp  json_parser.h  json_value.h  main.cpp
tour-of-cpp/projects/thread_pool/: CMakeLists.txt  README.md  main.cpp  thread_pool.h
(+21 files in other folders)
