# Chapters CMakeLists.txt
#
# This file orchestrates building all chapter examples, exercises, and tests.
# Each chapter is a subdirectory with its own CMakeLists.txt.

# Add all chapters
add_subdirectory(ch01_basics)
add_subdirectory(ch02_user_defined_types)
add_subdirectory(ch03_modularity)
add_subdirectory(ch04_error_handling)
add_subdirectory(ch05_classes)
add_subdirectory(ch06_essential_operations)
add_subdirectory(ch07_templates)
add_subdirectory(ch08_concepts)
add_subdirectory(ch09_library_overview)
add_subdirectory(ch10_strings_regex)
add_subdirectory(ch11_io)
add_subdirectory(ch12_containers)
add_subdirectory(ch13_algorithms)
add_subdirectory(ch14_ranges)
add_subdirectory(ch15_pointers_containers)
add_subdirectory(ch16_utilities)
add_subdirectory(ch17_numerics)
add_subdirectory(ch18_concurrency)
